11:46PM ready to create the Create page...

--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,23 @@ body {
   margin: auto;
 }
 
-.Post__Image {
+.Post {
   margin: 12px auto;
   padding: 12px 20px;
   border: 1px solid #eee;
   border-radius: 4px;
+  align-content: center;
+  text-align: center;
 }
 
 .Post__Image {
   max-width: 250px;
+}
+
+a {
+  text-decoration: none;
+  margin: 50px;
+}
+a.active {
+  text-decoration: underline;
 }
