--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   width: 290px;
   margin: auto;
 }
@@ -22,4 +23,10 @@ a {
 }
 a.active {
   text-decoration: underline;
+}
+
+.apptitle {
+  text-align: center;
+  width: auto;
+  margin: 10%;
 }
